--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ branca==0.7.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+flake8==7.0.0
 Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
 folium==0.16.0
 geographiclib==2.0
 geopy==2.4.1
@@ -12,12 +14,22 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonify==0.5
 MarkupSafe==2.1.5
+mccabe==0.7.0
+mypy==1.10.0
+mypy-extensions==1.0.0
 numpy==1.26.4
 pandas==2.2.2
+pandas-stubs==2.2.2.240514
+pep8==1.7.1
+pycodestyle==2.11.1
+pyflakes==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.31.0
 six==1.16.0
+SQLAlchemy==2.0.30
+types-pytz==2024.1.0.20240417
+typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 Werkzeug==3.0.3
